# Agri-Sarthi-WP

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt  system_prompt.py  tools.py
app/: agent.py  sarvam.py
app/config/: config.py  logging.py
app/src/wppconnect/: api.py
app/utils/: graph_utils.py
